# mercadobitcoin-rs

./: Cargo.toml  README.md
examples/: day_summary.rs  order_book.rs  ticker.rs  trade.rs
src/: lib.rs
