[package]
name = "mercadobitcoin-rs"
version = "0.1.0"
authors = ["msi <mbsd@m0x.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
reqwest = { version = "0.11.3", features = ["json", "trust-dns"] }
rust_decimal = {version = "1.14.1", features = ["serde-float"] }
rust_decimal_macros = "1.14.1"
serde = { version = "1.0.126", features = ["derive"] }
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
